--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ngrx/effects": "^13.1.0",
     "@ngrx/schematics": "^13.1.0",
     "@ngrx/store": "^13.1.0",
+    "@ngrx/store-devtools": "^13.1.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "@tailwindcss/aspect-ratio": "^0.4.0",
